# hypersync-factoryfetch

./: .gitignore  README.md  formatted_pool_addresses.txt  pyproject.toml
src/factory_address_fetcher/: __init__.py  fetcher.py  formatter.py
